# axum-notion

./: .gitignore  Cargo.toml  Config.dev.toml  Config.toml  Makefile  README.md  deny.toml  rustfmt.yaml  typos.toml
.github/workflows/: cache.yaml  ci.yaml  weekly.yaml
libs/api/: Cargo.toml
libs/api/src/: auth.rs  error-code.json  error.json  healthz.rs  lib.rs  main.rs  not_found.rs  request.rs  response.rs  util.rs
libs/api/src/agent/: function_call.rs  mod.rs  question_and_answer.rs
libs/api/src/block/: mod.rs  response.rs
libs/api/src/clients/: cloudflare.rs
libs/api/src/event/: mod.rs  request.rs  response.rs
libs/api/src/feed/: mod.rs  response.rs
libs/api/src/nudge/: mod.rs  request.rs
libs/api/src/page/: mod.rs  request.rs  response.rs
libs/api/src/post/: mod.rs  response.rs
libs/api/src/runtime/: mod.rs  request.rs  response.rs
libs/api/src/search/: mod.rs  request.rs  response.rs
libs/api/src/top/: mod.rs
libs/api/src/user/: mod.rs  response.rs
libs/api/src/util/: request.rs
libs/api/src/ws/: mod.rs  request.rs  response.rs
libs/cloudflare/: Cargo.toml
libs/cloudflare/examples/text_embeddings/: main.rs
libs/cloudflare/examples/text_generation/: main.rs
libs/cloudflare/examples/text_to_image/: main.rs
libs/cloudflare/examples/translation/: main.rs
libs/cloudflare/src/: models.rs
libs/cloudflare/src/models/: text_embeddings.rs  text_generation.rs  text_to_image.rs  translation.rs
libs/cloudflare/src/models/text_embeddings/: implementation.rs
libs/cloudflare/src/models/text_generation/: implementation.rs
libs/cloudflare/src/models/text_to_image/: implementation.rs
libs/cloudflare/src/models/translation/: implementation.rs
libs/entities/: Cargo.toml  Makefile  README.md
libs/entities/src/: lib.rs  m20240219_000001_create_block_table.rs  m20240219_000001_create_event_table.rs  m20240219_000001_create_page_table.rs  main.rs
libs/entities/src/entities/: _template.rs  block.rs  event.rs  mod.rs  page.rs
libs/entity/: Cargo.toml
libs/entity/src/: block.rs  document_type.rs  event.rs  lib.rs  notion_database.rs  nudge.rs  page.rs  post.rs  prelude.rs  prompt.rs  prompt_session.rs  static_page.rs  top.rs  user.rs
libs/langfuse/: Cargo.toml  README.md
libs/langfuse/src/apis/: configuration.rs  dataset_items_api.rs  dataset_run_items_api.rs  datasets_api.rs  health_api.rs  ingestion_api.rs  metrics_api.rs  mod.rs  observations_api.rs  projects_api.rs  prompts_api.rs  score_api.rs  sessions_api.rs  trace_api.rs
libs/langfuse/src/models/: base_prompt.rs  chat_prompt.rs  create_chat_prompt_request.rs  create_dataset_item_request.rs  create_dataset_run_item_request.rs  create_event_body.rs  create_event_event.rs  create_generation_body.rs  create_prompt_request.rs  create_prompt_request_one_of.rs  create_prompt_request_one_of_1.rs  create_score_request.rs  create_span_body.rs  create_span_event.rs  create_text_prompt_request.rs  daily_metrics.rs  daily_metrics_details.rs  dataset.rs  dataset_core.rs  dataset_run.rs  dataset_status.rs  dataset_with_references.rs  ingestion_event.rs  ingestion_event_one_of.rs  ingestion_event_one_of_1.rs  ingestion_event_one_of_2.rs  ingestion_event_one_of_3.rs  ingestion_event_one_of_4.rs  ingestion_event_one_of_5.rs  ingestion_event_one_of_6.rs  ingestion_event_one_of_7.rs  ingestion_event_one_of_8.rs  ingestion_event_one_of_9.rs  map_value.rs  mod.rs  model_usage_unit.rs  observation.rs  observation_body.rs  observation_level.rs  observation_type.rs  (+31 more)
libs/models/: Cargo.toml  Makefile
libs/models/migration/src/: lib.rs  m20240219_000001_create_block_table.rs  m20240219_000001_create_page_table.rs
libs/models/src/: lib.rs
libs/models/src/entities/: block.rs  mod.rs  page.rs  prelude.rs
libs/models/src/repositories/: block.rs  mod.rs  page.rs
libs/repositories/: Cargo.toml
libs/repositories/migration/src/: lib.rs  m20240325_032727_create_page_table.rs
libs/repositories/src/: block.rs  event.rs  feed.rs  lib.rs  page.rs  post.rs
libs/repositories/src/active_models/: event.rs  mod.rs  page.rs  post.rs  prelude.rs
libs/repository/: Cargo.toml  Makefile
libs/repository/migration/src/: lib.rs  m20240325_032714_create_event_table.rs  m20240325_032732_create_post_table.rs  m20240325_032828_create_block_table.rs  m20240325_125942_create_index_at_post.rs  m20240407_034855_create_notion_database_table.rs  m20240512_100556_create_static_page_table.rs  m20240512_104914_rename_to_notion_parent_id_table.rs  m20240512_110241_add_parent_type_column.rs  m20240512_123038_remove_contents_column.rs  m20240517_085139_create_user_table.rs  m20240517_085140_create_prompt_session_table.rs  m20240517_085142_create_prompt_table.rs  m20240517_162442_create_prompt_page_table.rs  m20240526_114017_remove_fk_user_id.rs  m20240526_114430_remove_fk_prompt_session_id.rs  m20240526_114439_remove_fk_prompt_id.rs  m20240526_114446_remove_fk_page_id.rs  m20240528_111910_add_title_column.rs  m20240528_141124_add_tools_prompt.rs  m20240529_121200_add_draft_column.rs  m20240529_132201_create_nudge_table.rs  m20240529_134720_add_page_id_column.rs
libs/repository/src/: block.rs  event.rs  lib.rs  notion_database.rs  nudge.rs  page.rs  post.rs  prompt.rs  prompt_session.rs  response.rs  session.rs  static_page.rs  top.rs  user.rs
libs/repository/src/active_models/: block.rs  mod.rs  notion_database.rs  nudge.rs  page.rs  prelude.rs  prompt.rs  prompt_page.rs  prompt_session.rs  sea_orm_active_enums.rs  static_page.rs  user.rs
libs/rpc/: Cargo.toml
libs/rpc/src/: lib.rs  main.rs
libs/sync-github/: Cargo.toml
libs/sync-github/src/: client.rs  lib.rs  main.rs  response.rs
libs/sync-github/src/events/: mod.rs  response.rs  test.json
libs/sync-notion/: Cargo.toml
libs/sync-notion/src/: lib.rs  main.rs  response.rs
libs/sync-notion/src/block/: mod.rs
libs/sync-notion/src/page/: mod.rs
libs/util/: Cargo.toml
libs/util/src/: lib.rs
src/: main.rs
