workspace = { members = [
    "libs/api",
    "libs/entities",
    "libs/repositories",
    "libs/sync-github",
    "libs/sync-notion",
] }
[package]
name = "axum-notion"
version = "0.1.0"
edition = "2021"

[dependencies]
shuttle-axum = "0.42.0"
shuttle-runtime = { version = "0.42.0", default-features = false }
shuttle-shared-db = { version = "0.42.0", features = ["sqlx", "postgres"] }
tokio = "1.28.2"
tracing = "0.1.40"
tracing-subscriber = "0.3"
api = { path = "./libs/api" }
sync-notion = { path = "./libs/sync-notion" }
sync-github = { path = "./libs/sync-github" }
toml = "0.8.12"