workspace = { members = [
    "libs/api",
    "libs/cloudflare",
    "libs/entity",
    "libs/langfuse",
    "libs/repository",
    "libs/rpc",
    "libs/sync-github",
    "libs/sync-notion",
    "libs/util",
], exclude = [
    "libs/repository/migration",
] }
[package]
name = "takassh"
version = "0.1.0"
edition = "2021"

[dependencies]
shuttle-axum = "0.44.0"
shuttle-runtime = { version = "0.44.0", default-features = false }
shuttle-shared-db = { version = "0.44.0", features = ["sqlx", "postgres"] }
shuttle-persist = "0.44.0"
tokio = "1.28.2"
tracing = "0.1.40"
api = { path = "./libs/api" }
sync-notion = { path = "./libs/sync-notion" }
sync-github = { path = "./libs/sync-github" }
repository = { path = "./libs/repository" }
cloudflare = { path = "./libs/cloudflare" }
langfuse = { path = "./libs/langfuse" }
rpc = { path = "./libs/rpc" }
util = { path = "./libs/util" }
toml = "0.8.12"
url = "2.5.1"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
tracing-loki = "0.2.5"
base64 = "0.22.1"
anyhow = "1.0.81"
futures = "0.3.30"
notion-client = "0.1.15"
aws-sdk-s3 = { version = "1.24.0", features = ["rt-tokio"] }
aws-config = { version = "1.2.1", features = ["behavior-version-latest"] }
qdrant-client = "1.9.0"
redis = { version = "0.25.4", features = ["tls-native-tls"] }
