[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }
repository = { path = "../repository" }
axum = { version = "0.7.3" }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
anyhow = "1.0.81"
