[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }
repository = { path = "../repository" }
axum = { version = "0.7.3" }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
anyhow = "1.0.81"
utoipa = { version = "4.2.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
utoipa-redoc = { version = "3.0.0", features = ["axum"] }
utoipa-rapidoc = { version = "3.0.0", features = ["axum"] }
tokio = "1.37.0"
toml = "0.8.12"
utoipauto = "0.1.10"
