[package]
name = "cloudflare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "../util" }
anyhow = "1.0.86"
reqwest = "0.12.4"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.117"
toml = "0.8.13"
tokio = { version = "1.37.0", features = ["full"] }
bytes = "1.6.0"
futures-core = "0.3.30"
futures-util = "0.3.30"
async-stream = "0.3.5"
