[package]
name = "entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
strum = { version = "0.26.2", features = ["derive"] }
serde = { version = "1.0.201", features = ["derive"] }
regex = "1.10.4"
anyhow = "1.0.82"
