[package]
name = "repository"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }
migration = { path = "./migration" }

sea-orm = { version = "^0.12.0", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
] }
chrono = "0.4.37"
log = "0.4.21"
anyhow = "1.0.81"
strum = { version = "0.26.2" }
shuttle-persist = "0.42.0"
