[package]
name = "rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
entity = { path = "../entity" }
repository = { path = "../repository" }
util = { path = "../util" }
rpc-router = "0.1.3"
anyhow = "1.0.86"
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full"] }
serde_json = "1.0.117"
chrono = "0.4.38"
