[package]
name = "sync-github"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }
repository = { path = "../repository" }
tracing = "0.1.40"
tokio = { version = "1.36.0", features = ["macros"] }
toml = "0.8.12"
reqwest = "0.12.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
chrono = "0.4.35"
serde_with = { version = "3.7.0", features = ["macros"] }
tracing-subscriber = "0.3"
anyhow = "1.0.81"
