[package]
name = "sync-notion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }
repository = { path = "../repository" }
tokio = { version = "1.36.0", features = ["macros"] }
tracing = "0.1.40"
serde_json = "1.0.116"
async-recursion = "1.0.5"
notion-client = "0.1.10"
toml = "0.8.12"
anyhow = "1.0.81"
futures = "0.3.30"
tracing-subscriber = "0.3.18"
