[package]
name = "sync-notion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }
repository = { path = "../repository" }
cloudflare = { path = "../cloudflare" }
util = { path = "../util" }
tokio = { version = "1.36.0", features = ["macros"] }
tracing = "0.1.40"
serde_json = "1.0.113"
async-recursion = "1.0.5"
notion-client = "0.1.15"
toml = "0.8.12"
anyhow = "1.0.81"
futures = "0.3.30"
tracing-subscriber = "0.3.18"
qdrant-client = "1.9.0"
uuid = { version = "1.8.0", features = ["v4"] }
serde = { version = "1.0.202", features = ["derive"] }
